opam-version: "1.2"
author: "John Else <john.else@gmail.com>"
maintainer: "John Else <john.else@gmail.com>"
homepage: "https://github.com/xcp-ng/xcp-featured"
bug-reports: "https://github.com/xcp-ng/xcp-featured/issues"
dev-repo: "git://github.com/xcp-ng/xcp-featured"
build: [
  "jbuilder" "build" "-p" name "-j" jobs
]
depends: [
  "xapi-idl"
  "xapi-types"
]
