opam-version: "2.0"
author: "John Else <john.else@gmail.com>"
maintainer: "John Else <john.else@gmail.com>"
homepage: "https://github.com/xcp-ng/xcp-featured"
bug-reports: "https://github.com/xcp-ng/xcp-featured/issues"
dev-repo: "git://github.com/xcp-ng/xcp-featured"
build: [
  "dune" "build" "-p" name "-j" jobs
]
depends: [
  "xapi-idl"
  "xapi-types"
]
